--- a/qingwei/res/layout-sw600dp/item_detail_page_fragment.xml
+++ b/qingwei/res/layout-sw600dp/item_detail_page_fragment.xml
@@ -111,7 +111,7 @@
 	        android:layout_marginTop="50dp"
 	        android:background="@drawable/bg_blue_box_button"
 	        android:gravity="center"
-	        android:text="Buy"
+	        android:text="@string/buy"
 	        android:textAppearance="?android:attr/textAppearanceLarge" />
 	    <TextView
 	        android:id="@+id/delist"
