--- a/qingwei/res/layout-sw600dp/item_detail_page_fragment.xml
+++ b/qingwei/res/layout-sw600dp/item_detail_page_fragment.xml
@@ -3,20 +3,18 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="#ffdadbdb"
-    android:orientation="vertical"
-    android:padding="15dp" >
+    android:padding="@dimen/activity_vertical_margin" >
 	<RelativeLayout
 	    android:layout_width="match_parent"
 	    android:layout_height="match_parent"
 	    android:background="@drawable/bg_white_box"
-	    android:orientation="vertical"
 	    android:layout_centerInParent="true"
 	    android:padding="10dp" >
 	    <ImageView
 	        android:id="@+id/imageView1"
-	        android:layout_width="450dp"
-	        android:layout_height="450dp"
-	        android:layout_marginLeft="15dp"
+	        android:layout_width="@dimen/goods_item_detail_img_width"
+            android:layout_height="@dimen/goods_item_detail_img_height"
+	        android:layout_marginLeft="10dp"
 	        android:layout_marginTop="20dp"
 	        android:layout_alignParentTop="true"
 	        android:layout_alignParentLeft="true"
@@ -25,12 +23,12 @@
 	    
 	    <ListView
 	        android:id="@+id/item_imgs"
-	        android:layout_width="wrap_content"
-	        android:layout_height="450dp"
-	        android:layout_marginLeft="15dp"
+	        android:layout_width="72dp"
+	        android:layout_height="@dimen/goods_item_detail_img_height"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentRight="true"
+	        android:layout_marginRight="10dp"
 	        android:layout_marginTop="20dp"
-	        android:layout_alignParentTop="true"
-	        android:layout_toRightOf="@id/imageView1"
 	        android:divider="#00000000"
 	        android:dividerHeight="5dp" />
 	    
