--- a/qingwei/res/layout-sw600dp/item_img.xml
+++ b/qingwei/res/layout-sw600dp/item_img.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="66dp"
-    android:layout_height="66dp"
+    android:layout_width="72dp"
+    android:layout_height="72dp"
+    android:background="@drawable/bg_item_image"
     android:orientation="vertical"
     android:padding="2dp" >
 
