--- a/qingwei/res/layout-xhdpi/item_detail_page_fragment.xml
+++ b/qingwei/res/layout-xhdpi/item_detail_page_fragment.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     android:background="#ffdadbdb"
     android:orientation="vertical"
-    android:padding="15dp" >
+    android:padding="@dimen/activity_vertical_margin" >
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -14,8 +14,8 @@
         android:padding="10dp" >
         <ImageView
             android:id="@+id/imageView1"
-            android:layout_width="250dp"
-            android:layout_height="250dp"
+            android:layout_width="@dimen/goods_item_detail_img_width"
+            android:layout_height="@dimen/goods_item_detail_img_height"
             android:layout_marginLeft="0dp"
             android:layout_marginTop="0dp"
             android:layout_alignParentTop="true"
@@ -25,12 +25,12 @@
         
         <ListView
             android:id="@+id/item_imgs"
-            android:layout_width="wrap_content"
-            android:layout_height="250dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="0dp"
+            android:layout_width="50dp"
+            android:layout_height="@dimen/goods_item_detail_img_height"
             android:layout_alignParentTop="true"
-            android:layout_toRightOf="@id/imageView1"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="0dp"
+            android:layout_marginTop="0dp"
             android:divider="#00000000"
             android:dividerHeight="5dp" />
         
