--- a/qingwei/res/values/dimens.xml
+++ b/qingwei/res/values/dimens.xml
@@ -1,7 +1,10 @@
 <resources>
 
     <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="activity_horizontal_margin">10dp</dimen>
-    <dimen name="activity_vertical_margin">10dp</dimen>
+    <dimen name="activity_horizontal_margin">5dp</dimen>
+    <dimen name="activity_vertical_margin">5dp</dimen>
 
+    <dimen name="goods_item_img_height">120dp</dimen>
+    <dimen name="goods_item_detail_img_width">200dp</dimen>
+    <dimen name="goods_item_detail_img_height">200dp</dimen>
 </resources>
