--- a/qingwei/res/values/dimens.xml
+++ b/qingwei/res/values/dimens.xml
@@ -7,4 +7,6 @@
     <dimen name="goods_item_img_height">120dp</dimen>
     <dimen name="goods_item_detail_img_width">200dp</dimen>
     <dimen name="goods_item_detail_img_height">200dp</dimen>
+    
+    <dimen name="goods_item_imgs_witdh">72dp</dimen>
 </resources>
