--- a/qingwei/res/drawable/bg_item_image.xml
+++ b/qingwei/res/drawable/bg_item_image.xml
@@ -4,5 +4,6 @@
     <item android:state_pressed="true" android:drawable="@drawable/bg_item_image_selected" />
     <item android:state_focused="true" android:drawable="@drawable/bg_item_image_selected" />
     <item android:state_selected="true" android:drawable="@drawable/bg_item_image_selected" />
+    <item android:state_activated="true" android:drawable="@drawable/bg_item_image_selected" />
     <item android:drawable="@drawable/bg_white_box" />
 </selector>
