--- a/qingwei/res/layout-sw600dp/item_detail_page_fragment.xml
+++ b/qingwei/res/layout-sw600dp/item_detail_page_fragment.xml
@@ -30,7 +30,8 @@
 	        android:layout_marginRight="10dp"
 	        android:layout_marginTop="20dp"
 	        android:divider="#00000000"
-	        android:dividerHeight="5dp" />
+	        android:dividerHeight="5dp"
+	        android:scrollbars="none" />
 	    
 	    <TextView
 	        android:id="@+id/title"
