--- a/qingwei/res/layout-xhdpi/item_detail_page_fragment.xml
+++ b/qingwei/res/layout-xhdpi/item_detail_page_fragment.xml
@@ -32,7 +32,8 @@
             android:layout_marginRight="0dp"
             android:layout_marginTop="0dp"
             android:divider="#00000000"
-            android:dividerHeight="5dp" />
+            android:dividerHeight="5dp"
+            android:scrollbars="none" />
         
         <TextView
             android:id="@+id/title"
