--- a/qingwei/res/layout/item_detail_page_fragment.xml
+++ b/qingwei/res/layout/item_detail_page_fragment.xml
@@ -32,7 +32,8 @@
             android:layout_alignParentTop="true"
             android:layout_toRightOf="@id/imageView1"
             android:divider="#00000000"
-            android:dividerHeight="5dp" />
+            android:dividerHeight="5dp"
+            android:scrollbars="none" />
         
         <TextView
             android:id="@+id/title"
