--- a/qingwei/res/menu/item.xml
+++ b/qingwei/res/menu/item.xml
@@ -5,5 +5,10 @@
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="@string/action_settings"/>
-
+    <item
+        android:id="@+id/share"
+        android:icon="@drawable/ic_action_share"
+        android:showAsAction="ifRoom"
+        android:title="@string/action_share">
+    </item>
 </menu>
