--- a/qingwei/res/menu/item.xml
+++ b/qingwei/res/menu/item.xml
@@ -1,10 +1,15 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_about"
+        android:orderInCategory="200"
+        android:showAsAction="never"
+        android:title="@string/action_about"/>
+    <item
+        android:id="@+id/action_feedback"
         android:orderInCategory="100"
         android:showAsAction="never"
-        android:title="@string/action_settings"/>
+        android:title="@string/action_feedback"/>
     <item
         android:id="@+id/share"
         android:icon="@drawable/ic_action_share"
