--- a/qingwei/res/menu/item.xml
+++ b/qingwei/res/menu/item.xml
@@ -14,6 +14,7 @@
         android:id="@+id/share"
         android:icon="@drawable/ic_action_share"
         android:showAsAction="ifRoom"
+        android:actionProviderClass="com.actionbarsherlock.widget.ShareActionProvider"
         android:title="@string/action_share">
     </item>
 </menu>
