update the layout dimens

--- a/qingwei/res/layout/item_detail_page_fragment.xml
+++ b/qingwei/res/layout/item_detail_page_fragment.xml
@@ -108,8 +108,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/divider2"
-            android:layout_marginBottom="40dp"
-            android:layout_marginTop="50dp"
+            android:layout_marginBottom="@dimen/buy_button_bottom_margin"
+            android:layout_marginTop="@dimen/buy_button_bottom_margin"
             android:background="@drawable/bg_blue_box_button"
             android:gravity="center"
             android:text="@string/buy"
