--- a/qingwei/res/layout/card_ex.xml
+++ b/qingwei/res/layout/card_ex.xml
@@ -13,6 +13,12 @@
         android:paddingRight="8dp" >
 
         <TextView
+            android:id="@+id/title_num"
+            style="@style/CardTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+        
+        <TextView
             android:id="@+id/title"
             style="@style/CardTitle"
             android:layout_width="0dp"
