--- a/qingwei/res/menu/item.xml
+++ b/qingwei/res/menu/item.xml
@@ -13,7 +13,7 @@
     <item
         android:id="@+id/share"
         android:icon="@drawable/ic_action_share"
-        android:showAsAction="ifRoom"
+        android:showAsAction="always"
         android:actionProviderClass="com.actionbarsherlock.widget.ShareActionProvider"
         android:title="@string/action_share">
     </item>
