--- a/qingwei/res/values-hdpi/dimens.xml
+++ b/qingwei/res/values-hdpi/dimens.xml
@@ -7,10 +7,13 @@
     <dimen name="activity_horizontal_margin">5dp</dimen>
     <dimen name="activity_vertical_margin">5dp</dimen>
     
-    <dimen name="goods_item_img_height">150dp</dimen>
+    <dimen name="goods_item_img_height">140dp</dimen>
     <dimen name="goods_item_detail_img_width">230dp</dimen>
     <dimen name="goods_item_detail_img_height">230dp</dimen>
     
     <dimen name="goods_item_imgs_width">48dp</dimen>
     <dimen name="goods_item_imgs_height">48dp</dimen>
+    
+    <dimen name="buy_button_bottom_margin">10dp</dimen>
+    <dimen name="buy_button_top_margin">20dp</dimen>
 </resources>
