--- a/qingwei/res/values-sw360dp/dimens.xml
+++ b/qingwei/res/values-sw360dp/dimens.xml
@@ -13,4 +13,7 @@
     
     <dimen name="goods_item_imgs_width">50dp</dimen>
     <dimen name="goods_item_imgs_height">50dp</dimen>
+    
+    <dimen name="buy_button_bottom_margin">20dp</dimen>
+    <dimen name="buy_button_top_margin">20dp</dimen>
 </resources>
