--- a/qingwei/res/values-sw600dp/dimens.xml
+++ b/qingwei/res/values-sw600dp/dimens.xml
@@ -13,4 +13,7 @@
     
     <dimen name="goods_item_imgs_width">72dp</dimen>
     <dimen name="goods_item_imgs_height">72dp</dimen>
+    
+    <dimen name="buy_button_bottom_margin">40dp</dimen>
+    <dimen name="buy_button_top_margin">50dp</dimen>
 </resources>
